# birthdav

./: .gitignore  .gitlab-ci.yml  README.md  setup.cfg
src/birthdav/: __init__.py  __main__.py  dav.py  sync.py
tests/: test_client.py  test_dav_ssl.py  test_entry_point.py  test_sync.py
