[metadata]
name = birthdav
version = 1.0.0
author = Julien JPK
author_email = mail@jjpk.me
description = A tool to synchronise CardDAV birth dates to a CalDAV calendar
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/julienjpk/birthdav
classifiers =
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Communications :: Email :: Address Book
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    webdavclient3
    vobject

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    birthdav = birthdav.__main__:main
